# tableio_cfg_json

./: .gitignore  .gitmodules  LICENSE.txt  README.md  README_pypi.md  pyproject.toml  run_build.py  run_clean.py  run_clean_build.py  run_pypi_build.py  run_setup_build_environment.py  run_static_checks.py  setup.py
.github/workflows/: main.yml  tagged.yml
custom_build_tools/: custom_spec.py  pydoc-markdown.yml  pydoc-markdown_protected.yml
custom_build_tools/src/: __init__.py
custom_build_tools/test/: __init__.py
doc/: api.md  protected_api.md
example/data/: cities_input.csv
example/test/: conftest.py
src/tableio_cfg_json/: __init__.py  _wizard_ui_bridge_calendar.py  _wizard_ui_bridge_fake.py  _wizard_ui_bridge_form.py  _wizard_ui_bridge_form_prefill.py  _wizard_ui_bridge_helpers.py  _wizard_ui_bridge_parse.py  _wizard_ui_bridge_path.py  _wizard_ui_bridge_textual_widgets.py  config.py  describe.py  wizard.py  wizard_ui_bridge.py  wizard_ui_bridge_arg_types.py  wizard_ui_bridge_console.py  wizard_ui_bridge_form_defs.py  wizard_ui_bridge_table.py  wizard_ui_bridge_textual.py  wizard_ui_factory.py
test/test_tableio_cfg_json/: __init__.py  cfg_rw_support.py  conftest.py  form_field_support.py  test_cfg_bad_values.py  test_cfg_write_read.py  test_config.py  test_describe.py  test_integration.py  test_ui_bridge_base.py  test_ui_console.py  test_ui_console_typed.py  test_ui_factory.py  test_ui_fake.py  test_ui_form.py  test_ui_form_typed.py  test_ui_parse.py  test_ui_textual.py  test_ui_textual_form.py  test_ui_textual_screen.py  test_ui_textual_table.py  test_ui_textual_typed.py  test_wizard.py  test_wizard_ask.py  test_wizard_defaults.py  test_wizard_edit.py  (+3 more)
(+16 files in other folders)
