[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tableio-cfg-json"
version = "0.0.1"
authors = [
  { name="Tom Björkholm", email="klausuler_linnet0q@icloud.com" },
]
description = "config-as-json configuration encapsulation for tableio."
readme = "README_pypi.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dynamic = ["dependencies"]

[project.urls]
"Source code" = "https://bitbucket.org/tom-bjorkholm/tableio_cfg_json"

