[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tableio-cfg-json"
version = "0.8"
authors = [
  { name="Tom Björkholm", email="klausuler_linnet0q@icloud.com" },
]
description = "config-as-json configuration encapsulation for tableio."
readme = "README_pypi.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = [
    "configuration", "wizard", "TableIO"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Typed"
]
dynamic = ["dependencies"]

[project.urls]
"Source code" = "https://github.com/tom-bjorkholm/tableio_cfg_json"
"Documentation" = "https://github.com/tom-bjorkholm/tableio_cfg_json/tree/master/doc"
